[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TabScreens/Settings/Settings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="Settings" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 5.0
margin_right = 1009.0
margin_bottom = 595.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 994.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 994.0
margin_bottom = 104.0
custom_constants/vseparation = 4
columns = 2

[node name="LblReset" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_right = 765.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Reset database (No warning! No turning back, although you can re-import)"

[node name="BtResetDB" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 769.0
margin_right = 994.0
margin_bottom = 20.0
text = "Reset"

[node name="LblImportEDSMInhabited" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 24.0
margin_right = 765.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Downloads and imports data from EDSM into EDTPT (Select your option in the dropdown button)"

[node name="BtEDSMDownloads" type="MenuButton" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 769.0
margin_top = 24.0
margin_right = 994.0
margin_bottom = 44.0
text = "Import"
flat = false
expand_icon = true

[node name="Lbl7zPath" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 48.0
margin_right = 765.0
margin_bottom = 72.0
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "We need 7z to extract the downloaded files, please [url=\"https://www.7-zip.org/download.html\"]install it[/url] and set the path here if it's not the default one"
text = "We need 7z to extract the downloaded files, please install it and set the path here if it's not the default one"

[node name="Tb7ZPath" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 769.0
margin_top = 48.0
margin_right = 994.0
margin_bottom = 72.0
rect_min_size = Vector2( 225, 0 )
text = "C:/Program Files/7-Zip/7z.exe"

[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/BtResetDB" to="." method="_on_BtResetDB_pressed"]
[connection signal="meta_clicked" from="MarginContainer/VBoxContainer/GridContainer/Lbl7zPath" to="." method="_on_Lbl7zPath_meta_clicked"]
